<resources>
    <string name="app_name">News Aggregator</string>
    <string name="update_news_entry_list_button_text">Update</string>
    <string name="add_rss_channel_button_text">Add</string>
    <string name="add_rss_channel_edit_text_hint">Enter URL of rss-channel</string>
    <string name="repeating_update_alarm_interval_edit_text_hint">Enter repeating alarm interval</string>
    <string name="delete_rss_channels_button_text">Delete channels</string>
    <string name="confirm_deleting_rss_channels_button_text">Delete</string>
    <string name="enable_updating_notifications_button_text">Subscribe to updates</string>
    <string name="disable_updating_notifications_button_text">Unsubscribe to updates</string>

    <string name="rss_channels_loading_error_message">Downloading RSS-channels error!</string>
    <string name="rss_channels_adding_error_message">Adding RSS-channels error!</string>
    <string name="rss_channels_adding_success_message">RSS-channels added successfully</string>
    <string name="rss_channels_deleting_error_message">Deleting RSS-channels error!</string>
    <string name="rss_channels_deleting_success_message">RSS-channels deleted successfully</string>
    <string name="news_entries_updating_error_message">Updating news entry list error!</string>
    <string name="news_entries_loading_error_message">Downloading news entry list error!</string>
    <string name="empty_news_entry_list_message">Update news list required</string>
    <string name="empty_rss_channel_list_message">RSS-channel list is empty</string>
    <string name="enable_updating_notifications_message">You subscribed to updates</string>
    <string name="disable_updating_notifications_message">You unsubscribed to updates</string>
    <string name="invalid_reepating_update_alarm_interval_message">Invalid periodicity</string>
    <string name="empty_reepating_update_alarm_interval_message">Enter the periodicity</string>

    <string name="update_notification_content_title">Fresh news</string>
    <string name="update_notification_content_text">There were fresh news in RSS feeds</string>
    <string name="notification_channel_description">News aggregator</string>
    <string name="downloading_news_entry_list_notification_content_title">Updating news list</string>

    <string-array name="repeatingIntervalUnitList">
        <item>hours</item>
        <item>days</item>
    </string-array>
</resources>
