<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.channel.list.RssChannelListActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/addRssChannelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_rss_channel_edit_text_hint" />

    <Button
        android:id="@+id/addRssChannelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddRssChannelButtonClick"
        android:text="@string/add_rss_channel_button_text" />

    <Button
        android:id="@+id/deleteRssChannelsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDeleteRssChannelsButtonClick"
        android:text="@string/delete_rss_channels_button_text" />

    <Button
        android:id="@+id/enableUpdatingNotificationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEnableUpdatingNotificationsButtonClick"
        android:text="@string/enable_updating_notifications_button_text" />

    <EditText
        android:id="@+id/repeatingUpdateAlarmIntervalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeating_update_alarm_interval_edit_text_hint" />

    <Button
        android:id="@+id/disableUpdatingNotificationsButton"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDisableUpdatingNotificationsButtonClick"
        android:text="@string/disable_updating_notifications_button_text" />

    <ProgressBar
        android:id="@+id/rssChannelsLoadingProgress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rssChannelList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp" />
</LinearLayout>